--- a/Publico/index.html
+++ b/Publico/index.html
@@ -4,25 +4,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../Style/style.css">
     <title>Quem sou eu?</title>
 </head>
 
 <body>
     <header id="cabecalho">
-        <section>
+        <section class="topo">
+            <div>
+                <p>sobre mim</p>
+            </div>
             
-                <div>
-                    <p>sobre mim</p>
-                </div>
-                <div>
-                    <p> Meus conhecimentos</p>
-                </div>
-            
+            <div>
+                <p> Meus conhecimentos</p>
+            </div>
         </section>
     </header>
-    <main></main>
-    <footer></footer>
+
+    <main id="corpo">
+        <section>
+<div>
+    <img src="vai ser excluido" alt="">
+    <P>foto aqui mas vou terminar em casa porque pqp to sem ideia</P>
+</div>
+        </section>
+        <section>
+            <div class="pedaco">
+                <p>j</p>
+            </div>
+        </section>
+    </main>
+    <footer class="rodape">
+        Feito para treinar tudo para entregar o inimaginavel
+    </footer>
 </body>
 
 </html>
