--- a/Publico/index.html
+++ b/Publico/index.html
@@ -32,6 +32,9 @@
             <div class="pedaco">
                 <p>j</p>
             </div>
+            <div>
+                <p>outra informação</p>
+            </div>
         </section>
     </main>
     <footer class="rodape">
