--- a/Publico/index.html
+++ b/Publico/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <header id="cabecalho">
+        <nav class="navegacao">
         <section class="topo">
             <div>
                 <p>sobre mim</p>
