--- a/Publico/index.html
+++ b/Publico/index.html
@@ -4,32 +4,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Style/style.css">
+    <link rel="stylesheet" href="../style/style.css">
     <title>Quem sou eu?</title>
 </head>
 
 <body>
     <header id="cabecalho">
         <nav class="navegacao">
-        <section class="topo">
-            <div>
-                <p>sobre mim</p>
-            </div>
-            
-            <div>
-                <p> Meus conhecimentos</p>
-            </div>
-        </section>
+            <section class="topo">
+                <div>
+                    <p>sobre mim</p>
+                </div>
+                
+                <div>
+                    <p> Meus conhecimentos</p>
+                </div>
+            </section>
+        </nav>
     </header>
 
     <main id="corpo">
-        <section>
-<div>
-    <img src="vai ser excluido" alt="">
-    <P>foto aqui mas vou terminar em casa porque pqp to sem ideia</P>
-</div>
+        <section id="sobre" class="secao">
+            <div>
+                <img src="vai ser excluido" alt="">
+                <P>foto aqui mas vou terminar em casa porque pqp to sem ideia</P>
+            </div>
         </section>
-        <section>
+        <section id="habilidades" class="secao">
             <div class="pedaco">
                 <p>j</p>
             </div>
