--- a/Portifolio_Novo/Index/Portifolio.html
+++ b/Portifolio_Novo/Index/Portifolio.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="../css/portifolio.css">
 </head>
 
-<body class="dark-theme">
+<body id="corpoFundo">
     <header>
-        <section>
+        <section class="tirarEstiloLink">
             <div>
                 <a href="">
                     <p>Sobre mim</p>
