--- a/Portifolio_Novo/Index/Portifolio.html
+++ b/Portifolio_Novo/Index/Portifolio.html
@@ -10,23 +10,29 @@
 
 <body id="corpoFundo">
     <header>
-        <section class="tirarEstiloLink">
+
+
+
+        <section class="topoFlex">
             <div>
-                <a href="">
-                    <p>Sobre mim</p>
+                <a href="" class="linkSemEstilo" >
+                    <span>Sobre mim</span>
                 </a>
             </div>
             <div>
-                <a href="">
-                    <p>conhecimento</p>
+                <a href="" class="linkSemEstilo">
+                    <span>conhecimento</span>
                 </a>
             </div>
             <div>
-                <a href="">
-                    <p>Area de interrese</p>
+                <a href="" class="linkSemEstilo">
+                    <span>Area de interrese</span>
                 </a>
             </div>
         </section>
+
+
+
     </header>
     <main>
         <section>
@@ -52,7 +58,7 @@
         </div>
     </main>
     <footer>
-       <P> &copy; Feito por Rafael Franklin de Farias no ano de 2025 </P>
+        <P> &copy; Feito por Rafael Franklin de Farias no ano de 2025 </P>
     </footer>
 </body>
 
