Tentando ser criativo

--- a/Portifolio_Novo/Index/Portifolio.html
+++ b/Portifolio_Novo/Index/Portifolio.html
@@ -13,20 +13,20 @@
 
 
 
-        <section class="topoFlex">
+        <section id="topoFlex">
             <div>
                 <a href="" class="linkSemEstilo" >
-                    <span>Sobre mim</span>
+                    <span class="nuvemForm">Sobre mim</span>
                 </a>
             </div>
             <div>
                 <a href="" class="linkSemEstilo">
-                    <span>conhecimento</span>
+                    <span class="nuvemForm">conhecimento</span>
                 </a>
             </div>
             <div>
                 <a href="" class="linkSemEstilo">
-                    <span>Area de interrese</span>
+                    <span class="nuvemForm">Area de interrese</span>
                 </a>
             </div>
         </section>
@@ -42,20 +42,31 @@
         </section>
         <section id="minhaPessoa">
             <section>
-                <div>
-                    <img src="" alt="">
+                <div id="imagemforma">
+                    <img src="" alt="images (1).jfif">
+                    <p>text</p>
                 </div>
                 <div id="sobre">
-                    <p></p>
+                    <p class="tituloform">Sobre</p>
+                    <p>Olá, sou Rafael Franklin de Farias...</p>
                 </div>
             </section>
             <div id="gostos">
-                <p></p>
+                <p class="tituloform">Gostos</p>
+                <p>Sou uma pessoa que gosta de conversar, jogar e criar coisas, 
+                    tendo um exemplo criações feitas no jogo Fortnite, onde criei mapas
+                     e artes autorais </p>
             </div>
         </section>
+        <section>
         <div>
+            
+        </div>
+        
+            <div>
             <p>Ir para pagina conhecimento</p>
         </div>
+    </section>
     </main>
     <footer>
         <P> &copy; Feito por Rafael Franklin de Farias no ano de 2025 </P>
