--- a/Portifolio_Novo/Index/interesse.html
+++ b/Portifolio_Novo/Index/interesse.html
@@ -11,7 +11,11 @@
 <body>
     <header id="cabecalho">
         <section class="estiloTopo">
-
+            <div >
+                <a href="portifolio.html" class="voltarPagina">
+                    <p>Página inicial</p>
+                </a>
+            </div>
             <div>
                 <a href="" class="botaoCabecalho">
                     <p>Contato</p>
@@ -30,31 +34,11 @@
         </section>
     </header>
     <main>
-        <section>
-            <div>
-                <p></p>
-            </div>
-        </section>
-        <section id="minhaPessoa">
-            <section>
-                <div>
-                    <h1 id="entrada" class="titulo">Bem-vindo...</h1>
-                </div>
-                <div>
-                    <img src=""  id="fotoRosto">
-                </div>
-                <div id="sobre">
-                    <p></p>
-                </div>
-            </section>
-            <div id="gostos">
-                <p></p>
-            </div>
-        </section>
+
 
     </main>
     <footer id="rodape">
-       <P> &copy; Feito por Rafael Franklin de Farias no ano de 2025 </P>
+        <P> &copy; Feito por Rafael Franklin de Farias no ano de 2025 </P>
     </footer>
 </body>
 
