--- a/Portifolio_Novo/Index/Portifolio.html
+++ b/Portifolio_Novo/Index/Portifolio.html
@@ -41,7 +41,7 @@
                     <h1 id="entrada" class="titulo">Bem-vindo...</h1>
                 </div>
                 <div>
-                    <img src=""  id="fotoRosto">
+                    <img src="../imagem/teste.jpg"  id="fotoRosto">
                 </div>
                 <div id="sobre">
                     <p></p>
