--- a/Portifolio_Novo/Index/interesse.html
+++ b/Portifolio_Novo/Index/interesse.html
@@ -4,32 +4,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/interesse.css">
     <title>Portifólio</title>
-    <link rel="stylesheet" href="../css/portifolio.css">
 </head>
 
 <body>
     <header id="cabecalho">
         <section class="estiloTopo">
-            <div >
+
+            <div id="ii">
                 <a href="portifolio.html" class="voltarPagina">
                     <p>Página inicial</p>
                 </a>
             </div>
-            <div>
-                <a href="" class="botaoCabecalho">
-                    <p>Contato</p>
-                </a>
-            </div>
-            <div >
-                <a href="conhecimento.html" class="botaoCabecalho">
-                    <p>conhecimento</p>
-                </a>
-            </div>
-            <div>
-                <a href="interesse.html" class="botaoCabecalho">
-                    <p>Area de interesse</p>
-                </a>
+            <div id="ee">
+
+                <div>
+                    <a href="" class="botaoCabecalho">
+                        <p>Contato</p>
+                    </a>
+                </div>
+                <div>
+                    <a href="conhecimento.html" class="botaoCabecalho">
+                        <p>conhecimento</p>
+                    </a>
+                </div>
+                <div>
+                    <a href="interesse.html" class="botaoCabecalho">
+                        <p>Area de interesse</p>
+                    </a>
+                </div>
+
             </div>
         </section>
     </header>
